--- a/BuildMonitor/Content/Site.css
+++ b/BuildMonitor/Content/Site.css
@@ -120,16 +120,20 @@ html * {
 
 .status-Failure {
 	font-family: kenzo;
-	font-size: 75px;
+	font-size: 69px;
+	line-height: 82px;
 	color: #FB1B45;
 	margin-top: -20px;
 	margin-bottom: -5px;
+}
+.status-Failure:before {
+	content: "✘";
 }
 
 .status-FailedToStart {
 	font-family: kenzo;
 	font-size: 63px;
-    line-height: 82px;
+	line-height: 82px;
 	color: #F8730B;
 	margin-top: -20px;
 	margin-bottom: -5px;
@@ -141,6 +145,9 @@ html * {
 	color: #FB1B45;
 	margin-top: -20px;
 	margin-bottom: -5px;
+}
+.status-Error:before {
+	content: "☠";
 }
 
 .status-Running {
@@ -154,6 +161,9 @@ html * {
 	animation-name: pulsate;
 	animation-duration: 1s;
 	animation-iteration-count: infinite;
+}
+.status-Running:before {
+	content: "⚛";
 }
 
 .loader-charts {
